test/should-fail/shadowing-1.warn
名称[i]已被使用 --> 作为全局变量定义在[shadowing-1.j]第[2]行。